<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/review_bg">

    <ImageButton
        android:id="@+id/exit_review_window"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit_review" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_review"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="54dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <Button
                android:id="@+id/yes_review_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/button_pink_review"
                android:text="@string/yes_review"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <Button
                android:id="@+id/no_review_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginLeft="32dp"
                android:background="@drawable/button_pink_review"
                android:text="@string/no_review"
                android:textColor="@color/colorPartlyInvisibleReview"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>